# portfolio

./: .gitignore  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
.next/dev/: build-manifest.json  prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/dev/server/app/: page.js  page_client-reference-manifest.js
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
FlatChef/: .env.example  .gitignore  .pre-commit-config.yaml  README.md
FlatChef/.github/workflows/: ci.yml  deploy.yml
FlatChef/apps/api/: Dockerfile  alembic.ini  pyproject.toml
FlatChef/apps/api/flatchef/: config.py  deps.py  main.py
FlatChef/apps/api/flatchef/db/: models.py  session.py
FlatChef/apps/api/flatchef/db/migrations/: env.py
FlatChef/apps/api/flatchef/db/migrations/versions/: 0001_add_core_tables.py
FlatChef/apps/api/flatchef/observability/: logging.py  tracing.py
FlatChef/apps/api/tests/unit/: test_models.py  test_scaffold.py
FlatChef/apps/web/: package.json
FlatChef/infra/: README.md  docker-compose.yml
src/app/: globals.css  layout.tsx  page.tsx
src/components/sections/: About.tsx  Contact.tsx  Expertise.tsx  Hero.tsx  Projects.tsx  Resume.tsx  SystemDesign.tsx
src/components/ui/: Navbar.tsx
src/context/: ThemeContext.tsx
src/hooks/: useMousePosition.ts  useScrollProgress.ts  useSmoothScroll.ts
src/lib/: designs.ts  projects.ts
(+112 files in other folders)
