[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatchef"
version = "0.1.0"
description = "Agentic grocery procurement for Indian households"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.56",
    "anthropic>=0.39.0",
    "mcp>=1.2.0",
    "python-telegram-bot>=21.6",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "cryptography>=43.0.0",
    "uuid-utils>=0.9.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-redis>=4.6.0",
    "sqlalchemy[mypy]>=2.0.36",
]

[tool.hatch.build.targets.wheel]
packages = ["flatchef"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "T20", "RET", "SIM", "TID"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["tests/fixtures"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=flatchef --cov-report=term-missing --cov-fail-under=0"

[tool.coverage.run]
omit = ["tests/*"]
